[package]
name = "decryption-mlm-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.4"
cbc = { version = "0.1.2", features = ["std"] }
des = "0.8.1"
md5 = "0.7.0"
regex = "1.9.5"
wasm-bindgen = "0.2.87"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false